Bug 466942 - Plasmashell crashes
Summary: Plasmashell crashes
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-03-06 14:04 UTC by Nicolas Fella
Modified: 2023-03-07 08:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2023-03-06 14:04:01 UTC
While scrolling through Twitter. Presumably the videos in the timeline triggered (de)activation of the media player applet

#0  0x00007ffff477603b in QMetaObject::cast(QObject const*) const (this=this@entry=0x4db040 <Plasma::Containment::staticMetaObject>, obj=obj@entry=0x25d8120)
    at /usr/src/debug/qt6-qtbase-6.4.2-4.fc37.x86_64/src/corelib/kernel/qmetaobject.cpp:349
#1  0x00007ffff7bb0079 in QMetaObject::cast(QObject*) const (obj=0x25d8120, this=<optimized out>) at /usr/include/qt6/QtCore/qobjectdefs.h:136
#2  qobject_cast<Plasma::Containment*>(QObject*) (object=0x25d8120) at /usr/include/qt6/QtCore/qobject.h:442
#3  Plasma::Applet::containment() const (this=0x25d8120) at /home/nico/kde6/src/plasma-framework/src/plasma/applet.cpp:624
#4  0x00007ffff7bb0189 in Plasma::Applet::location() const (this=<optimized out>) at /home/nico/kde6/src/plasma-framework/src/plasma/applet.cpp:686
#5  0x00007ffff7f7eebf in AppletInterface::location() const (this=0x2492c20) at /home/nico/kde6/src/plasma-framework/src/plasmaquick/plasmoid/appletinterface.cpp:204
#6  AppletInterface::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=0x2492c20, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>)
    at /home/nico/kde6/build/plasma-framework/src/plasmaquick/KF6PlasmaQuick_autogen/include/moc_appletinterface.cpp:1071
#7  0x00007ffff6c3e8aa in QQmlPropertyData::readPropertyWithArgs(QObject*, void**) const (args=0x7fffffffac30, target=0x2492c20, this=0x7fff9421cca0)
    at /usr/src/debug/qt6-qtdeclarative-6.4.2-1.fc37.x86_64/redhat-linux-build/include/QtQml/6.4.2/QtQml/private/../../../../../../src/qml/qml/qqmlpropertydata_p.h:328
#8  QQmlPropertyData::readProperty(QObject*, void*) const (property=0x7fffffffac00, target=0x2492c20, this=0x7fff9421cca0)
    at /usr/src/debug/qt6-qtdeclarative-6.4.2-1.fc37.x86_64/redhat-linux-build/include/QtQml/6.4.2/QtQml/private/../../../../../../src/qml/qml/qqmlpropertydata_p.h:311
#9  QV4::loadProperty(QV4::ExecutionEngine*, QObject*, QQmlPropertyData const&) (v4=0xc638e0, object=0x2492c20, property=...)
    at /usr/src/debug/qt6-qtdeclarative-6.4.2-1.fc37.x86_64/src/qml/jsruntime/qv4qobjectwrapper.cpp:114
#10 0x00007ffff6c3f3e2 in QV4::QObjectWrapper::getProperty(QV4::ExecutionEngine*, QObject*, QQmlPropertyData const*) (engine=engine@entry=0xc638e0, object=<optimized out>, 
    object@entry=0x2492c20, property=0x7fff9421cca0) at /usr/src/debug/qt6-qtdeclarative-6.4.2-1.fc37.x86_64/src/qml/jsruntime/qv4qobjectwrapper.cpp:253
#11 0x00007ffff6c3fd19 in QV4::QObjectWrapper::getQmlProperty(QV4::ExecutionEngine*, QQmlRefPointer<QQmlContextData> const&, QObject*, QV4::String*, QV4::QObjectWrapper::RevisionMode, bool*, QQmlPropertyData const**) (engine=engine@entry=0xc638e0, qmlContext=..., object=0x2492c20, name=0x7fff9f3be598, revisionMode=revisionMode@entry=QV4::QObjectWrapper::IgnoreRevision, hasProperty=hasProperty@entry=0x0, property=0x0)
    at /usr/src/debug/qt6-qtdeclarative-6.4.2-1.fc37.x86_64/src/qml/jsruntime/qv4qobjectwrapper.cpp:379
#12 0x00007ffff6e100b2 in QV4::QQmlTypeWrapper::virtualGet(QV4::Managed const*, QV4::PropertyKey, QV4::Value const*, bool*) (m=0x7fff9f3be588, id=..., receiver=0x7fff9f3be588, hasProperty=0x0)
    at /usr/src/debug/qt6-qtdeclarative-6.4.2-1.fc37.x86_64/src/qml/qml/qqmltypewrapper.cpp:235
#13 0x00007ffff6c0d461 in QV4::Object::get(QV4::StringOrSymbol*, bool*, QV4::Value const*) const (receiver=0x7fff9f3be588, hasProperty=0x0, name=0x7fff9f3be590, this=0x7fff9f3be588)
    at /usr/src/debug/qt6-qtdeclarative-6.4.2-1.fc37.x86_64/redhat-linux-build/include/QtQml/6.4.2/QtQml/private/../../../../../../src/qml/jsruntime/qv4string_p.h:139
#14 QV4::Lookup::getterFallback(QV4::Lookup*, QV4::ExecutionEngine*, QV4::Value const&) (l=<optimized out>, engine=0xc638e0, object=<optimized out>)
    at /usr/src/debug/qt6-qtdeclarative-6.4.2-1.fc37.x86_64/src/qml/jsruntime/qv4lookup.cpp:194
#15 0x00007fff7388787f in  ()
#16 0x0000000000000000 in  ()
Comment 1 Bug Janitor Service 2023-03-06 16:29:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/749
Comment 2 Marco Martin 2023-03-07 08:30:26 UTC
Git commit 9fca66b2e872447e3218b1ecc087e0e96a4bda2f by Marco Martin.
Committed on 07/03/2023 at 08:29.
Pushed by mart into branch 'master'.

delete AppletQuickItems when the associated applet is deleted

AppletQuickItems hanging around is leaky and potential of crashes
as it assumes d->applet is valid

M  +1    -0    src/plasmaquick/appletquickitem.cpp

https://invent.kde.org/frameworks/plasma-framework/commit/9fca66b2e872447e3218b1ecc087e0e96a4bda2f