delete AppletQuickItems when the associated applet is deleted

AppletQuickItems hanging around is leaky and potential of crashes
as it assumes d->applet is valid

BUG:466942